--- a/.pylintrc
+++ b/.pylintrc
@@ -1,12 +1,53 @@
-﻿[MASTER]
+[MASTER]
 load-plugins=pylint_django
 django-settings-module=quickcart.settings
+ignore=migrations
+ignore-patterns=**/migrations/*.py
+extension-pkg-whitelist=cryptography,lxml,psycopg2
 
 [FORMAT]
 max-line-length=120
+ignore-long-lines=^\s*(# )?<?https?://\S+>?$
 
 [MESSAGES CONTROL]
-disable=C0111,C0114,C0115,C0116,R0903,C0103
+# Django-friendly message disables
+disable=C0111,C0114,C0115,C0116,  # missing docstrings
+        R0903,  # too few public methods
+        C0103,  # invalid name
+        W0212,  # protected member access
+        W0221,  # arguments differ from overridden method
+        W0223,  # method missing from parent class 
+        W0613,  # unused argument
+        W0603,  # global statement
+        W0718,  # broad exception caught
+        R0801,  # duplicate code
+        E0401,  # import error (helpful during development)
+        W0611,  # unused import
+        R0911,  # too many return statements
+        C0303,  # trailing whitespace
+        C0305,  # trailing newlines
+        C0412,  # imports not grouped
+        R0914,  # too many local variables
+        W0511,  # TODOs
+        W0707,  # consider raising from
+        E1101    # no member (common false positive in Django)
+
+[DJANGO]
+# Django-specific settings
+django-modules-to-check=ems.djangoapps, common
 
 [BASIC]
-good-names=i,j,k,ex,Run,_,pk,id,urlpatterns,register,app_name
+good-names=i,j,k,ex,Run,_,pk,id,urlpatterns,register,app_name,qs,db,ip
+
+[DESIGN]
+# Design related settings
+max-parents=15
+max-attributes=15
+min-public-methods=0
+max-public-methods=25
+max-args=10
+
+[TYPECHECK]
+# Type checking settings
+ignored-classes=WSGIRequest,HttpRequest,HttpResponse,Response,QuerySet
+generated-members=REQUEST,acl_users,aq_parent,objects,DoesNotExist,id,pk,_meta,request,.*_set
