--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,18 @@ requires-python = "^3.12"
 dependencies = [
     "django (>=5.2.1,<6.0.0)",
     "django-tailwind (>=4.0.1,<5.0.0)",
-    "django-crum (>=0.7.9,<0.8.0)"
+    "django-crum (>=0.7.9,<0.8.0)",
+    "authlib (>=1.2.1,<2.0.0)",
+    "cryptography (>=41.0.0,<42.0.0)",
+    "measurement (>=3.2.0,<4.0.0)",
+    "django-warnings-logging (>=0.1.0,<0.2.0)",
+    "djangorestframework (>=3.14.0,<4.0.0)",
+    "celery (>=5.3.0,<6.0.0)",
+    "psycopg2-binary (>=2.9.6,<3.0.0)",
+    "django-filter (>=23.2,<24.0)",
+    "urllib3 (>=2.0.0,<3.0.0)",
+    "text-unidecode (>=1.3,<2.0)",
+    "redis (>=5.0.0,<6.0.0)"
 ]
 
 [tool.poetry]
@@ -21,6 +32,12 @@ pytest = "^8.4.0"
 pylint = "^3.3.7"
 flake8 = "^7.2.0"
 pylint-django = "^2.6.1"
+black = "^24.0.0"
+isort = "^5.12.0"
+pytest-django = "^4.8.0"
+
+[tool.django]
+settings_module = "quickcart.settings"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
